--- a/TaskingSystem/Views/Users/Index.cshtml
+++ b/TaskingSystem/Views/Users/Index.cshtml
@@ -33,9 +33,11 @@
                 <td>@user.Email</td>
                 <td>@string.Join(" , ", user.Roles.ToList())</td>
                 <td>
-                    <a class="btn btn-primary" asp-controller="Users" asp-action="ManageRoles" asp-route-userId="@user.Id">Roles</a>
-                    <a class="btn btn-primary" asp-controller="Users" asp-action="Edit" asp-route-userId="@user.Id">Edit</a>
-                    <a href="javascript:;" class="btn btn-danger js-delete" data-id="@user.Id">Delete</a>
+                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <a class="btn btn-primary btn-sm " asp-controller="Users" asp-action="ManageRoles" asp-route-userId="@user.Id">Roles</a>
+                        <a class="btn btn-dark btn-sm " asp-controller="Users" asp-action="Edit" asp-route-userId="@user.Id">Edit</a>
+                        <a href="javascript:;" class="btn btn-danger btn-sm js-delete" data-id="@user.Id">Delete</a>
+                    </div>
                 </td>
             </tr>
         }
