--- a/TaskingSystem/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TaskingSystem/Areas/Identity/Pages/Account/Register.cshtml
@@ -83,7 +83,7 @@
                         <input type="file"
                                accept="image/*"
                                asp-for="Input.ProfilePicture"
-                               class="custom-file-input"
+                               class="form-control"
                                onchange="document.getElementById('profilePicture').src = window.URL.createObjectURL(this.files[0])" />
                         <span asp-validation-for="Input.ProfilePicture" class="text-danger"></span>
                     </div>
