--- a/TaskingSystem/Views/AssignmentHeadLines/Create.cshtml
+++ b/TaskingSystem/Views/AssignmentHeadLines/Create.cshtml
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group mt-4">
                 <label asp-for="ProfessorId" class="control-label">Professor</label>
-                <select asp-for="ProfessorId" class="form-control mt-2" asp-items="ViewBag.ProfessorUserName"></select>
+                <select asp-for="ProfessorId" class="form-control mt-2" asp-items="ViewBag.ProfessorId"></select>
             </div>
             <div class="form-group mt-4">
                 <label asp-for="CourseCode" class="control-label"></label>
