--- a/TaskingSystem/Views/CoursesRegistration/Index.cshtml
+++ b/TaskingSystem/Views/CoursesRegistration/Index.cshtml
@@ -7,7 +7,11 @@
 <h1>Courses Registration</h1>
 
 <p>
-    <a class=" btn btn-primary mt-4" asp-action="Create">Create New</a>
+    @if (!(User.IsInRole(Roles.SuperAdmin) || User.IsInRole(Roles.Admin) || User.IsInRole(Roles.Manger)))
+    {
+        <a class=" btn btn-primary mt-4" asp-action="Create">Create New</a>
+
+    }
 </p>
 <table class="table">
     <thead>
@@ -22,19 +26,20 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Student.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Course.CourseCode)
-            </td>
-            <td>
-                   
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Student.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Course.CourseCode)
+                </td>
+                <td>
+
                     @Html.ActionLink("Delete", "Delete", new { CourseCode = item.CourseCode, StudentId = item.StudentId }, new Dictionary<string, object> { { "class", " btn btn-danger " } })
-            </td>
-        </tr>
-}
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
