--- a/TaskingSystem/Views/AssignmentHeadLines/Edit.cshtml
+++ b/TaskingSystem/Views/AssignmentHeadLines/Edit.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group mt-4">
                 <label asp-for="ProfessorId" class="control-label">Professor</label>
-                <select asp-for="ProfessorId" class="form-control mt-2" asp-items="ViewBag.ProfessorUserName"></select>
+                <select asp-for="ProfessorId" class="form-control mt-2" asp-items="ViewBag.ProfessorId"></select>
                 <span asp-validation-for="ProfessorId" class="text-danger"></span>
             </div>
             <div class="form-group mt-4">
