--- a/TaskingSystem/Views/Courses/Edit.cshtml
+++ b/TaskingSystem/Views/Courses/Edit.cshtml
@@ -19,8 +19,8 @@
                 <span asp-validation-for="CourseName" class="text-danger"></span>
             </div>
             <div class="form-group mt-2">
-                <label asp-for="ProfessorId" class="control-label">Professor</label>
-                <select asp-for="ProfessorId" class="form-control mt-2" asp-items="ViewBag.ProfessorUserName"></select>
+                <label asp-for="ProfessorId" class="control-label"></label>
+                <select asp-for="ProfessorId" class="form-control mt-2" asp-items="ViewBag.ProfessorId"></select>
                 <span asp-validation-for="ProfessorId" class="text-danger"></span>
             </div>
             <div class="form-group mt-2">
