--- a/TaskingSystem/Views/CoursesRegistration/Create.cshtml
+++ b/TaskingSystem/Views/CoursesRegistration/Create.cshtml
@@ -13,8 +13,8 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group mt-4">
-                <label asp-for="StudentId" class="control-label">Student</label>
-                <select asp-for="StudentId" class="form-control mt-2" asp-items="ViewBag.UserName"></select>
+                <label asp-for="StudentId" class="control-label"></label>
+                <select asp-for="StudentId" class="form-control mt-2" asp-items="ViewBag.StudentId"></select>
                 <span asp-validation-for="StudentId" class="text-danger"></span>
 
             </div>
